# ICG-2017

./: CMakeLists.txt  CMakeLists.txt.user.7a58c40  Prj1_Remy_Readme.txt  README.md  Readme.txt  Readme_w1.txt  Readme_w2.txt  Readme_w3.txt  Readme_w4.txt
Exam/: Exam_questions.aux  Exam_questions.out  Exam_questions.tex  Exam_questions.toc
Infinite-terrain-master/: .clang-format  .gitignore  CMakeLists.txt  README.md  style.bash
Infinite-terrain-master/common/: FindGLFW3.cmake  stb_image.h
Infinite-terrain-master/src/: framebuffer.h  main.cpp
Infinite-terrain-master/src/grid/: grid.h  grid_fshader.glsl  grid_vshader.glsl  sand_texture.tga  snow_texture.tga
Infinite-terrain-master/src/perlinTex/: perlinTex.h  perlinTex_fshader.glsl  perlinTex_vshader.glsl
Infinite-terrain-master/src/sky/: sky.h  sky_fshader.glsl  sky_vshader.glsl
Infinite-terrain-master/src/tree/: algae_texture.tga  cactus_texture.tga  desert_tree_texture.tga  reed_texture.tga  snowy_tree_texture.tga  tree.h  tree_fshader.glsl  tree_texture.tga  tree_vshader.glsl
Infinite-terrain-master/src/water/: water.h  water_fshader.glsl  water_texture.tga  water_vshader.glsl
Other projects/: noise2d_fshader.glsl
Other projects/Infinite-terrain-master/common/: FindGLEW.cmake  check_error_gl.h  icg_helper.h  icg_settings.cmake  tiny_obj_loader.h
Other projects/Infinite-terrain-master/src/: Bezier.h  CMakeLists.txt  Config.h  Simulation.h
Other projects/Infinite-terrain-master/src/grid/: grass_texture.tga  rock_texture.tga
Other projects/Infinite-terrain-master/src/perlinTex/: perlinTex_fshader.glsl
common/: icg_helper.h  tiny_obj_loader.h
files Andi/: screenquad_fshader.glsl
hw2_trackball/: main.cpp  trackball.h
hw2_trackball/grid/: grid.h  grid_vshader.glsl
hw2p1_spiral/: main.cpp
hw2p2_checkerboard/quad/: quad_fshader.glsl
hw2p3_planets/: main.cpp
hw2p4_arkanoid/: CMakeLists.txt  main.cpp
hw2p4_arkanoid/quad/: quad.h  quad_fshader.glsl
hw3_shading/: main.cpp
hw3_shading/mesh/: art_fshader.glsl  flat_fshader.glsl  flat_vshader.glsl  mesh.h  phong_vshader.glsl  spot_fshader.glsl  toon_fshader.glsl  toon_vshader.glsl
hw4p1_fastsmooth/: framebuffer.h  main.cpp
hw4p1_fastsmooth/cube/: cube_vshader.glsl
hw4p1_fastsmooth/files Andi/: framebuffer.h  main.cpp  screenquad.h
hw4p1_fastsmooth/quad/: quad_fshader.glsl
hw4p1_fastsmooth/screenquad/: screenquad.h  screenquad_fshader.glsl
hw4p2_mirrorfloor/: main.cpp
hw4p2_mirrorfloor/floor/: floor_fshader.glsl  floor_vshader.glsl
hw4p3_motionblur/: framebuffer.h
hw4p3_motionblur/screenquad/: screenquad_fshader.glsl
icg_project/: CMakeLists.txt  Features.txt  Prj2_Remy_Readme.txt  README.txt  framebuffer.h  main.cpp  main.cpp.autosave  trackball.h
icg_project/Bezier/: Bezier.h
icg_project/grid/: grass.tga  grid.h  grid_fshader.glsl  grid_vshader.glsl  snow.tga
icg_project/particles/: particles.h  particles_fshader.glsl  particles_vshader.glsl
icg_project/prj1/: CMakeLists.txt  main.cpp
icg_project/prj1/grid/: grid_vshader.glsl
icg_project/prj1/quad/: quad.h  quad_fshader.glsl
icg_project/quad/: quad.h  quad_fshader.glsl  quad_vshader.glsl
icg_project/skybox/: skybox.h  skybox_fshader.glsl  skybox_vshader.glsl
icg_project/tessellation/: tessel_cshader.glsl  tessel_eshader.glsl  tessel_fshader.glsl  tessel_vshader.glsl  tessellationGrid.h
icg_project/tree/: pin_texture.tga  sapin_texture.tga  tree.h  tree.h.autosave  tree_fshader.glsl  tree_texture.tga  tree_vshader.glsl
icg_project/water/: water.h  water_fshader.glsl  water_texture.tga  water_vshader.glsl
lab1_helloworld/: helloworld_fshader.glsl  main.cpp
lab2_intro_to_glsl/: CMakeLists.txt  main.cpp
lab2_intro_to_glsl/quad/: quad.h  quad_fshader.glsl  quad_vshader.glsl
lab2_intro_to_glsl/triangle/: triangle.h  triangle_fshader.glsl  triangle_vshader.glsl
lab3_opengl3d/: CMakeLists.txt  main.cpp
lab3_opengl3d/cube/: cube.h
lab3_opengl3d/quad/: quad.h  quad_vshader.glsl
lab5_framebuffer/: main.cpp
lab5_framebuffer/screenquad/: screenquad.h  screenquad_fshader.glsl
